fix filter products on mobiles

--- a/src/app/search/pages/main-category/main-category.component.sass
+++ b/src/app/search/pages/main-category/main-category.component.sass
@@ -118,3 +118,8 @@
 //
 .startText
     text-align: start
+
+:host
+    ::ng-deep app-carousel
+        .indicators
+            bottom: 1rem
